[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
blake3 = "1.5.1"
bytes = "1.6.0"
chrono = "0.4.38"

derive_builder = "0.20.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["fs"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
] }
dashmap = "5.5.3"
futures = "0.3.30"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres"] }
nanoid = "0.4.0"
crossterm = "0.27.0"
tui = "0.19.0"
unicode-width = "0.1.12"
thiserror = "1.0.61"
